clear buttons added

--- a/linearnaAlgebra/témy/detStvMatice/index.html
+++ b/linearnaAlgebra/témy/detStvMatice/index.html
@@ -146,6 +146,9 @@
                            style="margin-left: 1.2rem;">
                            Vypočítaj
                         </button>
+                        <button id="clearBTN" type="button" class="btn btn-outline-danger" style="margin-left: 1.2rem;">
+                           Vymaž
+                        </button>
                      </div>
                      <style>
                         #matrix-input td {
@@ -191,6 +194,10 @@
                         </div>
                         <button id="calcBTN" type="button" class="btn btn-outline-success" style="margin-left: 1.2rem;">
                            Vypočítaj
+                        </button>
+                        <button id="clearBTN2" type="button" class="btn btn-outline-danger"
+                           style="margin-left: 1.2rem;">
+                           Vymaž
                         </button>
                      </div>
                   </div>
