fixed horizontal csrollbar in riadkove operacie

--- a/linearnaAlgebra/témy/riadkoveOperacie/index.html
+++ b/linearnaAlgebra/témy/riadkoveOperacie/index.html
@@ -74,8 +74,8 @@
                         postupnou aplikáciou nasledujúcich troch riadkových operácií: Vynásobením druhého riadku
                         konštantou <strong>-1</strong>, pripočítaním trojnásobku tretieho riadku k prvému riadku, a
                         napokon výmenou druhého a tretieho riadku.</p>
-                     <div
-                        style="display:flex; flex-wrap:wrap; align-items:center; justify-content: space-evenly; margin: 5rem auto;">
+                     <br><br>
+                     <div style="display:flex;  align-items:center; justify-content: space-evenly; margin: auto;">
                         <div>
                            <div style="margin: auto;">
                               \begin{align*}
@@ -100,6 +100,7 @@
                            </div>
                         </div>
                      </div>
+                     <br><br>
                      <p>Dve matice nazveme ekvivalentné, ak jednu možno utvorit' z druhej pomocou konečnej postupnosti
                         riadkových operácií O1, O2, O3. Pre ekvivalenciu matíc rezervujeme symbol \(\cong\)
                         ; pre matice z nášho príkladu teda platí \({\bf A}\cong {\bf B}\).</p>
