--- a/linearnaAlgebra/témy/deterRiadkoveOperacie/index.html
+++ b/linearnaAlgebra/témy/deterRiadkoveOperacie/index.html
@@ -15,7 +15,7 @@
    <link rel="stylesheet" href="../../../styleAll.css">
    <script src="../../../sizeAdjust.js" defer></script>
    <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
-   <title>Riadkové operácie determinant</title>
+   <title>Inverzná matica pomocou determinantov</title>
 </head>
 <script>
    $(document).ready(function () {
