split matrix get and more code, inv matrix added

--- a/linearnaAlgebra/témy/detStvMatice/index.html
+++ b/linearnaAlgebra/témy/detStvMatice/index.html
@@ -16,6 +16,7 @@
    <link rel="stylesheet" href="style.css" />
    <link rel="stylesheet" href="../../../styleAll.css">
    <script src="../../../sizeAdjust.js" defer></script>
+   <script src="createMatrix.js" defer></script>
    <script src="matrixScript.js" defer></script>
    <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
    <title>Determinant štvorcovej matice</title>
@@ -150,22 +151,7 @@
                            Vymaž
                         </button>
                      </div>
-                     <style>
-                        #matrix-input td {
-                           padding: 0.2rem;
-                        }
 
-                        #matrix-input td:focus-within input {
-                           outline: none;
-                           background-color: greenyellow;
-                        }
-
-                        #matrix-input {
-                           margin: auto;
-                           border-right: 1px solid black;
-                           border-left: 1px solid black;
-                        }
-                     </style>
                      <br>
                      <hr>
                      <p style="text-align: center;">Výpočet determinantu.</p>
