--- a/linearnaAlgebra/témy/invMaticaDet/index.html
+++ b/linearnaAlgebra/témy/invMaticaDet/index.html
@@ -80,9 +80,15 @@
                      <br>
                      <br>
                      <p>Pre regulárnu maticu A typu $$2\times 2$$ z uvedeného vyplýva nasledujúca formula:</p>
-                     <p>\mathrm{Ak}\ \mathbf{A}=\begin{pm} a_{11} & a_{12} \\ a_{21} & a_{22end{pmatrix}\ , \ \
-                        \mathrm{tak}\ \ \mathbf{}^{-1}=\frac{1}{\vert \mathbf{A} \vert}\begin{pmatrix} a_{22} & -a_{12}
-                        \\ -a_{21} & a_{11} \end{pmatrix}</p>
+                     <br>
+                     <div style="text-align: center; overflow-x: auto; margin-top: 2rem;">
+                        <p>$$\mathrm{Ak\ }\ \mathbf{A}=\begin{pmatrix}a_{11} & a_{12} \\ a_{21} & a_{22}\end{pmatrix}\ ,
+                           \
+                           \
+                           \mathrm{tak}\ \ \mathbf{A}^{-1}=\frac{1}{|\mathbf{A}|}\begin{pmatrix}a_{22} & -a_{12} \\
+                           -a_{21}
+                           & a_{11}\end{pmatrix}\ \ .$$</p>
+                     </div>
                   </div>
                   <div class="tab-pane fade" id="sample-problems" role="tabpanel" aria-labelledby="sample-problems-tab">
                      <p>Tab 2 content</p>
