--- a/linearnaAlgebra/témy/invMaticaVypocet/index.html
+++ b/linearnaAlgebra/témy/invMaticaVypocet/index.html
@@ -14,6 +14,9 @@
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
    <link rel="stylesheet" href="../../../styleAll.css">
    <script src="../../../sizeAdjust.js" defer></script>
+   <script src="../detStvMatice/createMatrix.js" defer></script>
+   <link rel="stylesheet" href="../detStvMatice/style.css">
+   <script src="inverz.js" defer></script>
    <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
    <title>Výpočet inverznej matice</title>
 </head>
@@ -87,7 +90,38 @@
                   </div>
                   <div class="tab-pane fade" id="practice-problems" role="tabpanel"
                      aria-labelledby="practice-problems-tab">
-                     <p>Tab 3 content</p>
+                     <p style="text-align: center;">Výpočet inverznej matice.</p>
+                     <div style="padding-bottom: 5rem;">
+
+                        <label for="matrix-size">Veľkosť matice:</label>
+                        <input style="border: none; border-bottom: 1px solid green; text-align: center" type="number"
+                           id="matrix-size" name="matrix-size" value="3" min="1" max="10" />
+                        <div style="display: flex;">
+                           <table style="margin: 1rem" id="matrix-input">
+                              <tbody>
+                                 <!-- use a loop to create rows and columns based on user input -->
+                                 <?php for ($i = 0; $i < 3; $i++) : ?>
+                                 <tr>
+                                    <?php for ($j = 0; $j < 3; $j++) : ?>
+                                    <td>
+                                       <input type="number" name="matrix[<?= $i ?>][<?= $j ?>]" value="0"
+                                          style="width: 1.5rem" />
+                                    </td>
+                                    <?php endfor; ?>
+                                 </tr>
+                                 <?php endfor; ?>
+                              </tbody>
+                           </table>
+                           <p id="mxVysledok3" style="margin: auto 0">=</p>
+                        </div>
+                        <button id="calcBTN" type="button" class="btn btn-outline-success" style="margin-left: 1.2rem;">
+                           Vypočítaj
+                        </button>
+                        <button id="clearBTN3" type="button" class="btn btn-outline-danger"
+                           style="margin-left: 1.2rem;">
+                           Vymaž
+                        </button>
+                     </div>
                   </div>
                </div>
             </div>
