--- a/linearnaAlgebra/témy/invMaticaVypocet/index.html
+++ b/linearnaAlgebra/témy/invMaticaVypocet/index.html
@@ -112,7 +112,8 @@
                                  <?php endfor; ?>
                               </tbody>
                            </table>
-                           <p id="mxVysledok3" style="margin: auto 0">=</p>
+                           <p style=" align-items: center; margin: auto 1rem auto 0;">=</p>
+                           <p id="mxVysledok3" style="margin: auto 0"></p>
                         </div>
                         <button id="calcBTN" type="button" class="btn btn-outline-success" style="margin-left: 1.2rem;">
                            Vypočítaj
