--- a/linearnaAlgebra/témy/invMaticaVypocet/index.html
+++ b/linearnaAlgebra/témy/invMaticaVypocet/index.html
@@ -96,7 +96,9 @@
                         <label for="matrix-size">Veľkosť matice:</label>
                         <input style="border: none; border-bottom: 1px solid green; text-align: center" type="number"
                            id="matrix-size" name="matrix-size" value="3" min="1" max="10" />
-                        <div style="display: flex;">
+                        <div style="display: flex;white-space: nowrap;
+                        overflow-x: auto;
+                        text-overflow: clip;">
                            <table style="margin: 1rem" id="matrix-input">
                               <tbody>
                                  <!-- use a loop to create rows and columns based on user input -->
