added new page vypocet sustavy linearnych rovnic

--- a/linearnaAlgebra/témy/gaussovTvarMatice/index.html
+++ b/linearnaAlgebra/témy/gaussovTvarMatice/index.html
@@ -125,45 +125,49 @@
                   </div>
                 </div>
               </div>
-            </div>
-            <div
-              style="display:flex; flex-wrap:wrap; align-items:center; justify-content: space-evenly; margin-bottom: 2rem;">
-              <div>
-                <div style="margin: auto;">
-                  \begin{align*}
-                  \begin{pmatrix}
-                  1 & x & 3 & 4 \\
-                  0 & 0 & 1 & y \\
-                  0 & 0 & 0 & 1 \\
-                  0 & 0 & 0 & 0
-                  \end{pmatrix}
-                  \end{align*}
+              <div
+                style="display:flex; flex-wrap:wrap; align-items:center; justify-content: space-evenly; margin-bottom: 2rem;">
+                <div>
+                  <div style="margin: auto;">
+                    \begin{align*}
+                    \begin{pmatrix}
+                    1 & x & 3 & 4 \\
+                    0 & 0 & 1 & y \\
+                    0 & 0 & 0 & 1 \\
+                    0 & 0 & 0 & 0
+                    \end{pmatrix}
+                    \end{align*}
 
+                  </div>
+                </div>
+                <div>
+                  <div style="margin: auto;">
+                    \begin{align*}
+                    \begin{pmatrix}
+                    1 & 0 & z & 0 \\
+                    0 & 1 & 3 & 0 \\
+                    0 & 0 & 0 & 1 \\
+                    0 & 0 & 0 & 0
+                    \end{pmatrix}
+                    \end{align*}
+                  </div>
                 </div>
               </div>
-              <div>
-                <div style="margin: auto;">
-                  \begin{align*}
-                  \begin{pmatrix}
-                  1 & 0 & z & 0 \\
-                  0 & 1 & 3 & 0 \\
-                  0 & 0 & 0 & 1 \\
-                  0 & 0 & 0 & 0
-                  \end{pmatrix}
-                  \end{align*}
-                </div>
-              </div>
+              Je dôležité uvedomit' si, že Gaussov tvar matice nie je určený <i>jednoznačne</i> . To znamená, že začnúc
+              s
+              rovnakou
+              maticou, dve nezávislé osoby môžu aplikovaním dvoch rôznych postupností riadkových operácií dospiet' k
+              dvom
+              rôznym Gaussovým tvarom, a oba výsledky môžu byt' správne.
             </div>
-            Je dôležité uvedomit' si, že Gaussov tvar matice nie je určený <i>jednoznačne</i> . To znamená, že začnúc s
-            rovnakou
-            maticou, dve nezávislé osoby môžu aplikovaním dvoch rôznych postupností riadkových operácií dospiet' k dvom
-            rôznym Gaussovým tvarom, a oba výsledky môžu byt' správne.
-          </div>
-          <div class="tab-pane fade" id="sample-problems" role="tabpanel" aria-labelledby="sample-problems-tab">
-            <p>Tab 2 content</p>
-          </div>
-          <div class="tab-pane fade" id="practice-problems" role="tabpanel" aria-labelledby="practice-problems-tab">
-            <p>Tab 3 content</p>
+
+
+            <div class="tab-pane fade" id="sample-problems" role="tabpanel" aria-labelledby="sample-problems-tab">
+              <p>Tab 2 content</p>
+            </div>
+            <div class="tab-pane fade" id="practice-problems" role="tabpanel" aria-labelledby="practice-problems-tab">
+              <p>Tab 3 content</p>
+            </div>
           </div>
         </div>
     </div>
