size adjust js moved to end of the main

--- a/linearnaAlgebra/témy/detStvMatice/index.html
+++ b/linearnaAlgebra/témy/detStvMatice/index.html
@@ -15,7 +15,6 @@
    <script src="det_sarrus.js" defer></script>
    <link rel="stylesheet" href="style.css" />
    <link rel="stylesheet" href="../../../styleAll.css">
-   <script src="../../../sizeAdjust.js" defer></script>
    <script src="createMatrix.js" defer></script>
    <script src="matrixScript.js" defer></script>
    <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
@@ -188,10 +187,8 @@
                      </div>
                   </div>
                </div>
-
-
-
          </main>
+         <script src="../../../sizeAdjust.js"></script>
       </div>
    </div>
 
