--- a/linearnaAlgebra/témy/invMaticaDet/index.html
+++ b/linearnaAlgebra/témy/invMaticaDet/index.html
@@ -13,7 +13,6 @@
    <script src="	https://unpkg.com/mathjs@9.5.2/lib/browser/math.js"></script>
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
    <link rel="stylesheet" href="../../../styleAll.css">
-   <script src="../../../sizeAdjust.js" defer></script>
    <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
    <title>Inverzná matica pomocou determinantov</title>
 </head>
@@ -100,6 +99,7 @@
                </div>
             </div>
          </main>
+         <script src="../../../sizeAdjust.js"></script>
       </div>
    </div>
 </body>
