--- a/linearnaAlgebra/témy/invMaticaVypocet/index.html
+++ b/linearnaAlgebra/témy/invMaticaVypocet/index.html
@@ -13,7 +13,6 @@
    <script src="	https://unpkg.com/mathjs@9.5.2/lib/browser/math.js"></script>
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
    <link rel="stylesheet" href="../../../styleAll.css">
-   <script src="../../../sizeAdjust.js" defer></script>
    <script src="../detStvMatice/createMatrix.js" defer></script>
    <link rel="stylesheet" href="../detStvMatice/style.css">
    <script src="inverz.js" defer></script>
@@ -129,6 +128,7 @@
                </div>
             </div>
          </main>
+         <script src="../../../sizeAdjust.js"></script>
       </div>
    </div>
 </body>
