--- a/landingPage/index.html
+++ b/landingPage/index.html
@@ -96,7 +96,7 @@
       </h3>
       <div id="card-holder">
         <div class="card">
-          <img class="card-img-top" src="../images/LAcard.svg" alt="Card image cap" />
+          <img class="card-img-top" src="../images/Lacard.svg" alt="Card image cap" />
           <div class="card-body">
             <h5 class="card-title">Lineárna algebra</h5>
             <p class="card-text">
