--- a/linearnaAlgebra/témy/algebrOperacieMatice/index.html
+++ b/linearnaAlgebra/témy/algebrOperacieMatice/index.html
@@ -34,10 +34,10 @@
 <body>
    <div class="container-fluid">
       <div class="row">
-         <nav class="col-md-3 col-lg-2  sidebar d-none d-lg-block" id="sidebar12"></nav>
+         <nav class="col-md-3 col-lg-2  sidebar d-none d-lg-block " id="sidebar12"></nav>
          <main style="margin-top: 3rem;">
             <header>
-               <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+               <nav class="navbar navbar-expand-lg navbar-dark fixed-top ">
                   <div class="container-fluid justify-content-start">
                      <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#sidebar"
                         aria-controls="sidebar" aria-expanded="false" aria-label="Toggle navigation"
