--- a/linearnaAlgebra/témy/sustavyLinearnychRovnic/index.html
+++ b/linearnaAlgebra/témy/sustavyLinearnychRovnic/index.html
@@ -53,7 +53,7 @@
                             <a class="nav-link" href="../../index.html">Matice</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" style="background-color: orangered; color: white" href="">Sústavy
+                            <a class="nav-link active" style="border: 1px solid white" href="">Sústavy
                                 lineárnych
                                 rovníc</a>
                         </li>
