changed color of h3 elements - cvicenia a uvod

--- a/linearnaAlgebra/témy/cvicenia/index.html
+++ b/linearnaAlgebra/témy/cvicenia/index.html
@@ -53,7 +53,7 @@
             <div class="offcanvas offcanvas-start fixed-top" tabindex="-1" id="sidebar"
                style="top: 56px; height: calc(100% - 56px);"></div>
             <div class="container my-5">
-               <h3 style="text-align: center; color:orangered">Príklady na precvičenie</h3>
+               <h3 style="text-align: center; color:rgb(27, 27, 112)">Príklady na precvičenie</h3>
                <hr>
 
             </div>
