--- a/linearnaAlgebra/témy/uvod/index.html
+++ b/linearnaAlgebra/témy/uvod/index.html
@@ -54,7 +54,7 @@
             <div class="offcanvas offcanvas-start fixed-top" tabindex="-1" id="sidebar"
                style="top: 56px; height: calc(100% - 56px);"></div>
             <div class="container my-5">
-               <h3 style="text-align: center; color:orangered">Teória</h3>
+               <h3 style="text-align: center; color:rgb(27, 27, 112)">Teória</h3>
                <hr>
                <p class="mb-0" style="margin-top: 3rem;">Matica je určitá množina čísel alebo iných matematických
                   objektov (tzv. prvkov matice) usporiadaných do pravidelných riadkov a stĺpcov (prípadne aj ich
