working with result multiplying matrices

--- a/linearnaAlgebra/témy/algebrOperacieMatice/index.html
+++ b/linearnaAlgebra/témy/algebrOperacieMatice/index.html
@@ -173,11 +173,11 @@
                         <input style="border: none; border-bottom: 1px solid green; text-align: center" type="number"
                            id="matrix-cols" name="matrix-cols" value="3" min="1" max="10" /><br><br>
                         <label for="matrix-rows">Počet riadkov matice 2:</label>
-                        <input style="border: none; border-bottom: 1px solid red; text-align: center" type="number"
-                           id="matrix-rows1" name="matrix-rows" value="3" min="1" max="10" />
+                        <input style="border: none; border-bottom: 1px solid rgb(123, 222, 255); text-align: center"
+                           type="number" id="matrix-rows1" name="matrix-rows" value="3" min="1" max="10" />
                         <label for="matrix-cols">Počet stĺpcov matice 2:</label>
-                        <input style="border: none; border-bottom: 1px solid red; text-align: center" type="number"
-                           id="matrix-cols1" name="matrix-cols" value="3" min="1" max="10" />
+                        <input style="border: none; border-bottom: 1px solid rgb(123, 222, 255); text-align: center"
+                           type="number" id="matrix-cols1" name="matrix-cols" value="3" min="1" max="10" />
 
                         <div
                            style="display: flex; flex-direction: column; justify-content: center; align-items: center; margin-top: 2rem;">
@@ -202,12 +202,9 @@
                            style="margin-left: 1.2rem;">
                            Vymaž
                         </button>
-
-
-
-
+                        <div id="matrix-output" style="display: flex; justify-content: center;margin-top: 2rem;">
+                        </div>
                      </div>
-
                   </div>
                </div>
             </div>
